unpackaged/main/default/objects/Partner_Lead__c/fields/Attribution_Date__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Date__c</fullName>
    <label>Attribution Date</label>
    <type>Date</type>
</CustomField>