unpackaged/main/default/objects/Partner_Lead__c/fields/Attribution_Month__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Month__c</fullName>
    <formula>DATE(YEAR(Attribution_Date__c),MONTH(Attribution_Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribution Month</label>
    <type>Date</type>
</CustomField>