unpackaged/main/default/objects/Partner_Lead__c/fields/Commission_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Commission_Eligible__c</fullName>
    <description>Pulling from the Partner Relationship to indicate on the Partner Lead if it is eligible for commission.</description>
    <formula>Partner_Relationship__r.Referral_Fee_Eligible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Eligible</label>
    <type>Checkbox</type>
</CustomField>