unpackaged/main/default/objects/Partner_Lead__c/fields/Commission_Status_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Commission_Status_Updated_At__c</fullName>
    <label>Commission Status Updated At</label>
    <type>DateTime</type>
</CustomField>