unpackaged/main/default/objects/Partner_Lead__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Leads</relationshipLabel>
    <relationshipName>Partner_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>