unpackaged/main/default/objects/Partner_Lead__c/fields/Customer_Existing_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Existing_Plan_Type__c</fullName>
    <label>Customer Existing Plan Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>