unpackaged/main/default/objects/Partner_Lead__c/fields/Influence_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Influence_Reasons__c</fullName>
    <label>Influence Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warm introduction to a key contact</fullName>
            </value>
            <value>
                <fullName>Shared deal intelligence</fullName>
            </value>
            <value>
                <fullName>Recommended Retool</fullName>
            </value>
            <value>
                <fullName>Demoed Retool</fullName>
            </value>
            <value>
                <fullName>Mentioned / featured Retool at event</fullName>
            </value>
            <value>
                <fullName>Filled a technical need customer lacked</fullName>
            </value>
            <value>
                <fullName>Resource augmentation</fullName>
            </value>
            <value>
                <fullName>Unlocked additional budget</fullName>
            </value>
            <value>
                <fullName>Ease of procurement</fullName>
            </value>
            <value>
                <fullName>More flexible payment terms</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>