unpackaged/main/default/objects/Partner_Lead__c/fields/Moment__c.field-meta.xml
<CustomField>
    <fullName>Moment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moment</label>
    <referenceTo>Moment__c</referenceTo>
    <relationshipLabel>Partner Leads</relationshipLabel>
    <relationshipName>Partner_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>