unpackaged/main/default/objects/Partner_Lead__c/fields/Notify_for_Triage__c.field-meta.xml
<CustomField>
    <fullName>Notify_for_Triage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify for Triage?</label>
    <type>Checkbox</type>
</CustomField>