unpackaged/main/default/objects/Partner_Lead__c/fields/Opp_Booking_Channel__c.field-meta.xml
<CustomField>
    <fullName>Opp_Booking_Channel__c</fullName>
    <formula>Opportunity__r.Booking_Channel_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp: Booking Channel</label>
    <type>Text</type>
</CustomField>