unpackaged/main/default/objects/Partner_Lead__c/fields/Opp_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Close_Date__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <label>Opp: Close Date</label>
    <type>Date</type>
</CustomField>