unpackaged/main/default/objects/Partner_Lead__c/fields/Opp_Forecast_New_AR__c.field-meta.xml
<CustomField>
    <fullName>Opp_Forecast_New_AR__c</fullName>
    <formula>Opportunity__r.Forecast_New_AR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp: Forecast New AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>