unpackaged/main/default/objects/Partner_Lead__c/fields/Opp_New_Annualized_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Opp_New_Annualized_Revenue__c</fullName>
    <formula>Opportunity__r.New_Annualized_Revenue__c</formula>
    <label>Opp: New Annualized Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>