unpackaged/main/default/objects/Partner_Lead__c/fields/Opp_of_Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Opp_of_Days_to_Close__c</fullName>
    <description>Number of days until opportunity closes</description>
    <formula>Opportunity__r.CloseDate - Opp_Qualified_Pipeline_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp: # of Days to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>