unpackaged/main/default/objects/Partner_Lead__c/fields/Opp_Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_Region__c</fullName>
    <formula>TEXT(Opportunity__r.Owner_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp: Owner Region</label>
    <type>Text</type>
</CustomField>