unpackaged/main/default/objects/Partner_Lead__c/fields/Opp_Owner_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_Subteam__c</fullName>
    <formula>TEXT(Opportunity__r.Owner_Subteam__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp: Owner Subteam</label>
    <type>Text</type>
</CustomField>