unpackaged/main/default/objects/Partner_Lead__c/fields/Opp_Qualified_Pipeline_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Qualified_Pipeline_Date__c</fullName>
    <formula>Opportunity__r.Qualified_Pipeline_AR_Date__c</formula>
    <label>Opp: Qualified Pipeline Date</label>
    <type>Date</type>
</CustomField>