unpackaged/main/default/objects/Partner_Lead__c/fields/Opp_Segment__c.field-meta.xml
<CustomField>
    <fullName>Opp_Segment__c</fullName>
    <description>Provides the account/opp segment for the partner relationship</description>
    <formula>TEXT(Opportunity__r.Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp: Segment</label>
    <type>Text</type>
</CustomField>