unpackaged/main/default/objects/Partner_Lead__c/fields/Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage__c</fullName>
    <formula>TEXT( Opportunity__r.StageName )</formula>
    <label>Opp: Stage</label>
    <type>Text</type>
</CustomField>