unpackaged/main/default/objects/Partner_Lead__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Leads (Partner Account)</relationshipLabel>
    <relationshipName>Partner_Account</relationshipName>
    <type>Lookup</type>
</CustomField>