unpackaged/main/default/objects/Partner_Lead__c/fields/Partner_Lead_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Lead_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Partner Lead External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>