unpackaged/main/default/objects/Partner_Lead__c/fields/Partner_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Lead_Status__c</fullName>
    <defaultValue>&quot;Submitted&quot;</defaultValue>
    <label>Partner Lead Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>