unpackaged/main/default/objects/Partner_Lead__c/fields/Partner_Lead_Status_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Partner_Lead_Status_Updated_At__c</fullName>
    <label>Partner Lead Status Updated At</label>
    <type>DateTime</type>
</CustomField>