unpackaged/main/default/objects/Partner_Lead__c/fields/Partner_Led_Sales_Activities_Single__c.field-meta.xml
<CustomField>
    <fullName>Partner_Led_Sales_Activities_Single__c</fullName>
    <label>zOLD Partner Led Sales Activities (Sin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial discussions with customer</fullName>
            </value>
            <value>
                <fullName>Customer has shown interest in Retool</fullName>
            </value>
            <value>
                <fullName>Conducted POC / demo</fullName>
            </value>
            <value>
                <fullName>Evaluation / planning stage</fullName>
            </value>
            <value>
                <fullName>Agreed on solution to business problem</fullName>
            </value>
            <value>
                <fullName>Finalized deployment need</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>