unpackaged/main/default/objects/Partner_Lead__c/fields/Partner_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Opportunity_Type__c</fullName>
    <label>Partner Opportunity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>