unpackaged/main/default/objects/Partner_Lead__c/fields/Partner_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Partner_Relationship__c</fullName>
    <label>Partner Relationship</label>
    <referenceTo>Partner_Relationship__c</referenceTo>
    <relationshipLabel>Partner Leads</relationshipLabel>
    <relationshipName>Partner_Leads</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>