unpackaged/main/default/objects/Partner_Lead__c/fields/Partner_Relationship_DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Relationship_DBA_Name__c</fullName>
    <formula>Partner_Relationship__r.Partner_DBA_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Relationship DBA Name</label>
    <type>Text</type>
</CustomField>