unpackaged/main/default/objects/Partner_Lead__c/fields/Potential_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Potential_Commission_Amount__c</fullName>
    <description>Forecasted Commission Amount for CoSell Deals</description>
    <formula>Opportunity__r.Forecast_New_AR__c * Partner_Relationship__r.Referral_Fee_Pct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Forecasted Commission Amount for CoSell Deals</inlineHelpText>
    <label>Potential Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>