unpackaged/main/default/objects/Partner_Lead__c/fields/Problem_to_Solve__c.field-meta.xml
<CustomField>
    <fullName>Problem_to_Solve__c</fullName>
    <label>Problem to Solve</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>