unpackaged/main/default/objects/Partner_Lead__c/fields/Referral_First_Submit_Effective_Days__c.field-meta.xml
<CustomField>
    <fullName>Referral_First_Submit_Effective_Days__c</fullName>
    <label>Referral: First Submit Effective Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>