unpackaged/main/default/objects/Partner_Lead__c/fields/Referral_Is_Resubmission__c.field-meta.xml
<CustomField>
    <fullName>Referral_Is_Resubmission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral: Is Resubmission?</label>
    <type>Checkbox</type>
</CustomField>