unpackaged/main/default/objects/Partner_Lead__c/fields/Referred_by_Email__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Email__c</fullName>
    <label>Partner Referred by Email</label>
    <type>Email</type>
</CustomField>