unpackaged/main/default/objects/Partner_Lead__c/fields/Referred_by_ID__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_ID__c</fullName>
    <label>Partner Referred by ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>