unpackaged/main/default/objects/Partner_Lead__c/fields/Referred_by_Name__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Name__c</fullName>
    <label>Partner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>