unpackaged/main/default/objects/Partner_Lead__c/fields/Rejection_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason_Details__c</fullName>
    <label>Rejection Reason Details</label>
    <type>TextArea</type>
</CustomField>