unpackaged/main/default/objects/Partner_Lead__c/fields/Request_Retool_Deal_Support__c.field-meta.xml
<CustomField>
    <fullName>Request_Retool_Deal_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Retool Deal Support</label>
    <type>Checkbox</type>
</CustomField>