unpackaged/main/default/objects/Partner_Lead__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <label>Submitted By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Retool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>