unpackaged/main/default/objects/Partner_Lead__c/fields/Segment_at_Create__c.field-meta.xml
<CustomField>
    <fullName>Segment_at_Create__c</fullName>
    <label>Segment at Create</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segment</valueSetName>
    </valueSet>
</CustomField>