unpackaged/main/default/objects/Partner_Lead__c/fields/Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Submitted_At__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Submitted At</label>
    <type>DateTime</type>
</CustomField>