unpackaged/main/default/objects/Partner_Lead__c/fields/Triage_Notes__c.field-meta.xml
<CustomField>
    <fullName>Triage_Notes__c</fullName>
    <label>Triage Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>