unpackaged/main/default/objects/Partner_Lead__c/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger</label>
    <type>Checkbox</type>
</CustomField>