unpackaged/main/default/objects/Partner_Lead__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Relationship_Types</valueSetName>
    </valueSet>
</CustomField>